Update to match latest ibmruntimes/ci.docker.