@@ -1,6 +1,6 @@
 #!/bin/bash
 #
-# (C) Copyright IBM Corporation 2016.
+# (C) Copyright IBM Corporation 2016, 2017
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -24,30 +24,30 @@ osver="ubuntu alpine"
 
 # sha256sum for the various versions, packages and arches
 declare -A jre_8_sums=(
-	[version]="1.8.0_sr3fp22"
-	[i386]="b3e0d6d3e12cd642d791a711fcd6e125127d7bf0733515d4707f03e4033f84de"
-	[ppc64le]="3e975dc5610358f5843b890867a2cd0be6d6f714be19865fb1a701d8739d770b"
-	[s390]="eb075cec66cdd94f5a606ade5eee48396d805ebf9417952eeeb2864c45d81181"
-	[s390x]="aed93cc1776c10f6ca721d93224ce5feb05f9efdf5eec539a5cdde0f858ee379"
-	[x86_64]="ec96d978612fd3981bae382a745669544280cdd7eaaa55fadfbd7a26aa447b25"
+	[version]="1.8.0_sr4fp1"
+	[i386]="759f03c969f0feffdb2b395fa8876ea1b750db90bed0688f8d10ce97e33348df"
+	[ppc64le]="1b0e5f3e0d95367836d7a0bdb30314dd6a820df06ef4eb6d160014cf57ea4b30"
+	[s390]="7ba77b232149ac5188b33f81b365173d0570cf044d41b5a493eddcab92de159b"
+	[s390x]="990e5472d22fff69c2d862b1ee38056cb1dd127043b2173da81a3e93e63959d0"
+	[x86_64]="1f8e4b9c0d03457703c17d54d1ac939696fe8d027da57d47a347833d8cafdc90"
 )
 
 declare -A sdk_8_sums=(
-	[version]="1.8.0_sr3fp22"
-	[i386]="090efbea7fc8324c434eaecdc680079ffece7cf69d90980708c73368bd6d31f7"
-	[ppc64le]="2eb37f5392f8dd4df4fd5ca874a81ce06cab93c7ff7000b537476accd8e5b727"
-	[s390]="9c3bb9c2d9858b960434784949e1d8190c9ca8d9f9da17a612bc1412de71813c"
-	[s390x]="766a8bbe482861bfdcbeeeb47de84616fba36efa5012fea5130300e00d52f6cd"
-	[x86_64]="7ea96e282eebb31c32b9b42a017a80f49ea2a0eb5f0f40b96ea3c8ee89b2ea60"
+	[version]="1.8.0_sr4fp1"
+	[i386]="02588e0494f5d091a9e0602e054af2d733f1fd01432192b5733fb95be4c8e964"
+	[ppc64le]="81ee611d981f0edd60f0ca5543aebcd93a73ef6f40aeda01a48a337661fb85e6"
+	[s390]="610e7a6d5bef62f53fa0057598b441c37d2e8a023fd40d91d5698b73ff9a783b"
+	[s390x]="c09151dc9111636145525267569632287ed5f4788cfda43da3a444d4fafad183"
+	[x86_64]="2b4377c4a8b6934a17ee8e2ec673b4a3d3b97f0b568ef5e20a6ea2e676345bf3"
 )
 
 declare -A sfj_8_sums=(
-	[version]="1.8.0_sr3fp22"
-	[i386]="cafcac4c96ae4e185ea6b94b765ba87a6dfe6284f57bd0df723f449155bb0fc9"
-	[ppc64le]="70691e0c7982fdbbd60fd39d45f48e5839867878bba133c546ffac93773747e4"
-	[s390]="d718b1fb9b17fbc5c817bb287bf190d420fc3ad97238d65ac08703bdb989cf93"
-	[s390x]="c5fa236a11f1a770bd3e6b109b1ac32bdfadb2452d3de68dd88929caacbe1181"
-	[x86_64]="6b63ed16b0f0cdc71da6d478a383e1896c132725a7c5a959310985c3549f6c75"
+	[version]="1.8.0_sr4fp1"
+	[i386]="737b4e3dc317cfe8c45512eddf3a520c9bf30a4aef902c415e89572e74c394e0"
+	[ppc64le]="d99393379775541da45f2d71f97584a146c9a3a15b8646ab03d9bed439aaa4e0"
+	[s390]="b86bc776aee9d83344d6f0ca8d4df053d69383e766651f6351a276ca251f0e13"
+	[s390x]="6d5ef74d4d19120ed0e88df54036d51ec5ee13e3d9fafa9c4bb818706439904e"
+	[x86_64]="e37d585c7e7df77065254ed866bc8db367e74720eea4507774d891b943c6428f"
 )
 
 declare -A sdk_9_sums=(
@@ -62,7 +62,7 @@ declare -A sdk_9_sums=(
 # Generate the common license and copyright header
 print_legal() {
 	cat > $1 <<-EOI
-	# (C) Copyright IBM Corporation 2016.
+	# (C) Copyright IBM Corporation 2016, 2017
 	#
 	# ------------------------------------------------------------------------------
 	#               NOTE: THIS DOCKERFILE IS GENERATED VIA "update.sh"
@@ -155,22 +155,32 @@ print_alpine_pkg() {
 	cat >> $1 <<'EOI'
 
 RUN apk --update add --no-cache openssl ca-certificates \
-    && ln -s /lib /lib64 \
     && GLIBC_VER="2.23-r3" \
     && ALPINE_GLIBC_REPO="https://github.com/sgerrand/alpine-pkg-glibc/releases/download" \
     && wget -q -O /tmp/$GLIBC_VER.apk $ALPINE_GLIBC_REPO/$GLIBC_VER/glibc-$GLIBC_VER.apk \
     && apk add --allow-untrusted /tmp/$GLIBC_VER.apk \
     && apk --update add xz \
     && wget -q -O /tmp/gcc-libs.tar.xz https://www.archlinux.org/packages/core/x86_64/gcc-libs/download \
-    && tar -xvJf /tmp/gcc-libs.tar.xz -C /tmp usr/lib/libgcc_s.so.1 usr/lib/libgcc_s.so \
-    && mv /tmp/usr/lib/libgcc* /usr/glibc-compat/lib \
-    && rm -rf /tmp/$GLIBC_VER.apk /tmp/usr /tmp/gcc-libs.tar.xz /var/cache/apk/*
+    && mkdir /tmp/gcc \
+    && tar -xf /tmp/gcc-libs.tar.xz -C /tmp/gcc \
+EOI
+
+	if [ "$ver" == "9" ]; then
+		GLIBC_PKGS="&& mv /tmp/gcc/usr/lib/libgcc* /tmp/gcc/usr/lib/libstdc++* /usr/glibc-compat/lib \\"
+	else
+		GLIBC_PKGS="&& mv /tmp/gcc/usr/lib/libgcc* /usr/glibc-compat/lib \\"
+	fi
+
+	cat >> $1 <<-EOI
+    $GLIBC_PKGS
+    && rm -rf /tmp/\$GLIBC_VER.apk /tmp/gcc /tmp/gcc-libs.tar.xz /var/cache/apk/*
 EOI
 }
 
 # Print the Java version that is being installed here
 print_env() {
-	shasums="$pack"_"$ver"_sums
+	spkg=$2
+	shasums="$spkg"_"$ver"_sums
 	jverinfo=${shasums}[version]
 	eval JVER=\${$jverinfo}
 
@@ -181,15 +191,18 @@ ENV JAVA_VERSION $JVER
 EOI
 }
 
-# Print
-print_ubuntu_main_run() {
-	shasums="$pack"_"$ver"_sums
+# Print the main RUN command that installs Java.
+# For Java 9 we use jlink to derive the JRE and the SFJ images.
+print_java_install() {
+	spkg=$2
+	dpkg=$3
+	shasums="$spkg"_"$ver"_sums
 	archsum=${shasums}[$arch]
 	eval ASUM=\${$archsum}
 	cat >> $1 <<-EOI
 RUN ESUM="$ASUM" \\
     && BASE_URL="https://public.dhe.ibm.com/ibmdl/export/pub/systems/cloud/runtimes/java/meta/" \\
-    && YML_FILE="$pack/linux/$arch/index.yml" \\
+    && YML_FILE="$spkg/linux/$arch/index.yml" \\
 EOI
 	cat >> $1 <<'EOI'
     && wget -q -U UA_IBM_JAVA_Docker -O /tmp/index.yml $BASE_URL/$YML_FILE \
@@ -204,58 +217,77 @@ EOI
     && /tmp/ibm-java.bin -i silent -f /tmp/response.properties \
     && rm -f /tmp/response.properties \
     && rm -f /tmp/index.yml \
-    && rm -f /tmp/ibm-java.bin
 EOI
-}
+	if [ "$ver" == "9" ]; then
+		if [ "$dpkg" == "jre" ]; then
+			JCMD="&& rm -f /tmp/ibm-java.bin \\
+    && cd /opt/ibm \\
+    && ./java/bin/jlink -G --module-path ./java/jmods --add-modules java.se.ee --output jre \\
+    && rm -rf java/* \\
+    && mv jre java"
+		elif [ "$dpkg" == "sfj" ]; then
+			JCMD="&& rm -f /tmp/ibm-java.bin \\
+    && cd /opt/ibm \\
+    && ./java/bin/jlink -G --module-path ./java/jmods --add-modules java.activation,java.base,java.compiler,java.datatransfer,java.desktop,java.instrument,java.logging,java.management,java.naming,java.prefs,java.rmi,java.security.jgss,java.security.sasl,java.sql,java.xml.crypto,java.xml,com.ibm.management --exclude-files=@/tmp/sfj-exclude.txt --output jre \\
+    && rm -rf java/* /tmp/sfj-exclude.txt \\
+    && mv jre java"
+		else
+			JCMD="&& rm -f /tmp/ibm-java.bin"
+		fi
+	else
+		JCMD="&& rm -f /tmp/ibm-java.bin"
+	fi
 
-print_alpine_main_run() {
-	shasums="$pack"_"$ver"_sums
-	archsum=${shasums}[$arch]
-	eval ASUM=\${$archsum}
-	cat >> $1 <<-EOI
-RUN ESUM="$ASUM" \\
-    && BASE_URL="https://public.dhe.ibm.com/ibmdl/export/pub/systems/cloud/runtimes/java/meta/" \\
-    && YML_FILE="$pack/linux/$arch/index.yml" \\
-EOI
-	cat >> $1 <<'EOI'
-    && wget -q -U UA_IBM_JAVA_Docker -O /tmp/index.yml $BASE_URL/$YML_FILE \
-    && JAVA_URL=$(cat /tmp/index.yml | sed -n '/'$JAVA_VERSION'/{n;p}' | sed -n 's/\s*uri:\s//p' | tr -d '\r') \
-    && wget -q -U UA_IBM_JAVA_Docker -O /tmp/ibm-java.bin $JAVA_URL \
-    && echo "$ESUM  /tmp/ibm-java.bin" | sha256sum -c - \
-    && echo "INSTALLER_UI=silent" > /tmp/response.properties \
-    && echo "USER_INSTALL_DIR=/opt/ibm/java" >> /tmp/response.properties \
-    && echo "LICENSE_ACCEPTED=TRUE" >> /tmp/response.properties \
-    && mkdir -p /opt/ibm \
-    && chmod +x /tmp/ibm-java.bin \
-    && /tmp/ibm-java.bin -i silent -f /tmp/response.properties \
-    && rm -f /tmp/response.properties \
-    && rm -f /tmp/index.yml \
-    && rm -f /tmp/ibm-java.bin
+	cat >> $1 <<EOI
+    $JCMD
 EOI
 }
 
 print_java_env() {
-if [ "$pack" == "sdk" ]; then
-	if [ "$ver" == "8" ]; then
-		cat >> $1 <<'EOI'
+	if [ "$pack" == "sdk" ]; then
+		if [ "$ver" == "8" ]; then
+			JHOME="/opt/ibm/java/jre"
+			JPATH="/opt/ibm/java/bin"
+		elif [ "$ver" == "9" ]; then
+			JHOME="/opt/ibm/java"
+			JPATH="/opt/ibm/java/bin"
+		fi
+	else
+		JHOME="/opt/ibm/java/jre"
+		JPATH="/opt/ibm/java/jre/bin"
+	fi
+	TPATH="PATH=$JPATH:\$PATH"
 
-ENV JAVA_HOME=/opt/ibm/java/jre \
-    PATH=/opt/ibm/java/bin:$PATH
+	cat >> $1 <<-EOI
+
+ENV JAVA_HOME=$JHOME \\
+    $TPATH
 EOI
-	elif [ "$ver" == "9" ]; then
-		cat >> $1 <<'EOI'
+}
 
-ENV JAVA_HOME=/opt/ibm/java \
-    PATH=/opt/ibm/java/bin:$PATH
+print_exclude_file() {
+	spkg=$2
+	dpkg=$3
+	if [ "$ver" == "9" -a "$dpkg" == "sfj" ]; then
+		cp sfj-exclude.txt `dirname $file`
+		cat >> $1 <<-EOI
+COPY sfj-exclude.txt /tmp
+
 EOI
 	fi
-else
-	cat >> $1 <<'EOI'
+}
 
-ENV JAVA_HOME=/opt/ibm/java/jre \
-    PATH=/opt/ibm/java/jre/bin:$PATH
-EOI
-fi
+generate_java() {
+	if [ "$ver" == "9" ]; then
+		spkg="sdk";
+	else
+		spkg=$pack;
+	fi
+	dpkg=$pack;
+	print_env $file $spkg;
+	print_exclude_file $file $spkg $dpkg;
+	print_java_install $file $spkg $dpkg;
+	print_java_env $file;
 }
 
 generate_ubuntu() {
@@ -266,9 +298,7 @@ generate_ubuntu() {
 	print_ubuntu_os $file;
 	print_maint $file;
 	print_ubuntu_pkg $file;
-	print_env $file;
-	print_ubuntu_main_run $file;
-	print_java_env $file;
+	generate_java $file;
 	echo "done"
 }
 
@@ -280,9 +310,7 @@ generate_alpine() {
 	print_alpine_os $file;
 	print_maint $file;
 	print_alpine_pkg $file;
-	print_env $file;
-	print_alpine_main_run $file;
-	print_java_env $file;
+	generate_java $file;
 	echo "done"
 }
 
@@ -297,20 +325,13 @@ do
 			for os in $osver
 			do
 				file=$ver-$pack/$arch/$os/Dockerfile
-				if [ "$ver" == "8" ]; then
-					# Ubuntu is supported for everything
-					if [ "$os" == "ubuntu" ]; then
-						generate_ubuntu $file
-					elif [ "$os" == "alpine" ]; then
-						# Alpine is supported for x86_64 arch and JRE and SFJ packages only
-						if [ "$arch" == "x86_64" ] && [ "$pack" == "jre" -o "$pack" == "sfj" ]; then
-							generate_alpine $file
-						fi
-					fi
-				elif [ "$ver" == "9" ]; then
-					# For now Java 9 betas images are only available for SDK
-					if [ "$os" == "ubuntu" -a "$pack" == "sdk" ]; then
-						generate_ubuntu $file
+				# Ubuntu is supported for everything
+				if [ "$os" == "ubuntu" ]; then
+					generate_ubuntu $file
+				elif [ "$os" == "alpine" ]; then
+					# Alpine is supported for x86_64 arch and JRE and SFJ packages only
+					if [ "$arch" == "x86_64" ] && [ "$pack" == "jre" -o "$pack" == "sfj" ]; then
+						generate_alpine $file
 					fi
 				fi
 			done
